# cs_go

./: commands.txt  config.cfg  game_waiting.py  main.py  pyproject.toml  vgcs2.cfg
